ingress/part02/default-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  namespace: ingress-space
spec:
  clusterIP: 10.107.200.183
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: default-backend
  sessionAffinity: None
  type: ClusterIP
